# python-stringcase

./: README.rst  setup.cfg  stringcase.py  stringcase_test.py
