[metadata]
name = stringcase
author = Taka Okunishi
author_email = okunishitaka.com@gmail.com
license = MIT
license_files = LICENSE
description = String case converter.
url = https://github.com/okunishinishi/python-stringcase
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = stringcase
